--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "dependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
-        "next": "15.1.4",
+        "next": "^16.0.7",
         "next-themes": "^0.4.4",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
         "react-icons": "^5.4.0",
         "sass": "^1.85.0",
         "zustand": "^5.0.3"
@@ -30,8 +30,8 @@
         "@trivago/prettier-plugin-sort-imports": "^5.2.1",
         "@types/jest": "^30.0.0",
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.1.2",
         "jest-environment-jsdom": "^30.1.2",
