--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,60 @@
 {
-    "compilerOptions": {
-        "target": "ES2017",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "bundler",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "incremental": true,
-        "sourceMap": true,
-        "plugins": [
-            {
-                "name": "next"
-            }
-        ],
-        "baseUrl": "./src",
-        "paths": {
-            "@/app/*": ["app/*"],
-            "@/views/*": ["views/*"],
-            "@/widgets/*": ["widgets/*"],
-            "@/features/*": ["features/*"],
-            "@/entities/*": ["entities/*"],
-            "@/shared/*": ["shared/*"]
-        }
-    },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.setup.js", "src/types/**/*.d.ts"],
-    "exclude": ["node_modules"]
+  "compilerOptions": {
+    "target": "ES2017",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "incremental": true,
+    "sourceMap": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "baseUrl": "./src",
+    "paths": {
+      "@/app/*": [
+        "app/*"
+      ],
+      "@/views/*": [
+        "views/*"
+      ],
+      "@/widgets/*": [
+        "widgets/*"
+      ],
+      "@/features/*": [
+        "features/*"
+      ],
+      "@/entities/*": [
+        "entities/*"
+      ],
+      "@/shared/*": [
+        "shared/*"
+      ]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "jest.setup.js",
+    "src/types/**/*.d.ts",
+    ".next/dev/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
